--- a/index.html
+++ b/index.html
@@ -5,9 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abtahi Rahman Protfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Tourney&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section>
+        <div class="content">
+            <h1>Wellcome to <br><span>Abtahi Rahman</span> World</h1>
+            <h2>Top Cyclists in Shahjadpur. Now deals with bike.  </h2>
+            <p>
+                My name is Abtahi Rahman. I am from Shahjadpur, sirajganj. I read in class one.
+                My name is Abtahi Rahman. I am from Shahjadpur, sirajganj. I read in class one.
+                My name is Abtahi Rahman.  I am from Shahjadpur, sirajganj. I read in class one.
+                My name is Abtahi Rahman. I am from Shahjadpur, sirajganj. I read in class one.
+                My name is Abtahi Rahman. I am from Shahjadpur, sirajganj. I read in class one.
+                My name is Abtahi Rahman.  I am from Shahjadpur, sirajganj. I read in class one.
+            </p>
+            <button>
+                <a target="_blank" href="https://www.linkedin.com/in/kayser-e-khuda-394357163/"> Hire Me</a>
+            </button>
+        </div>
+        <div class="content">
+            <img src="my-bg.png" alt="abtahi">
+        </div>
+    </section>
     
 </body>
 </html>
