--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="top-banner">
         <div class="content">
             <h1>Wellcome to <br><span>Abtahi Rahman</span> World</h1>
             <h2>Top Cyclists in Shahjadpur. Now deals with bike.  </h2>
@@ -28,7 +28,7 @@
             </button>
         </div>
         <div class="content">
-            <img src="my-bg.png" alt="abtahi">
+            <img src="images/my-bg.png" alt="abtahi">
         </div>
     </section>
     
