--- a/index.html
+++ b/index.html
@@ -31,6 +31,25 @@
             <img src="images/my-bg.png" alt="abtahi">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="content">
+            <img src="images/my-bg2nd.png" alt="2nd pic">
+        </div>
+        <div class="content">
+            <h1>Dream Big</h1>
+            <h2>Wants to become a army officer </h2>
+            <p>
+                I have a big dream. Every night i dream about army.When i will in class VI. I will attend in cadet admit test to become a army 
+                officer. Please pray for me.I have a big dream. Every night i dream about army.When i will in class VI. I will attend in cadet admit test to become a army 
+                officer. Please pray for me.I have a big dream. Every night i dream about army.When i will in class VI. I will attend in cadet admit test to become a army 
+                officer. Please pray for me.I have a big dream. Every night i dream about army.When i will in class VI. I will attend in cadet admit test to become a army 
+                officer. Please pray for me.
+            </p>
+            <button>
+                <a target="_blank" href="https://www.linkedin.com/in/kayser-e-khuda-394357163/"> Download Resume</a>
+            </button>
+        </div>
+    </section>
     
 </body>
 </html>
