Expereince & footer added

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-con">
         <div class="content">
-            <h1>Wellcome to <br><span>Abtahi Rahman</span> World</h1>
+            <h1>Wellcome to </h1>
+                <h1 ><span class="set-color">Abtahi Rahman </span>World</h1>
             <h2>Top Cyclists in Shahjadpur. Now deals with bike.  </h2>
             <p>
                 My name is Abtahi Rahman. I am from Shahjadpur, sirajganj. I read in class one.
@@ -31,7 +32,8 @@
             <img src="images/my-bg.png" alt="abtahi">
         </div>
     </section>
-    <section class="dream-big">
+
+    <section class="dream-big flexible-con">
         <div class="content">
             <img src="images/my-bg2nd.png" alt="2nd pic">
         </div>
@@ -50,6 +52,44 @@
             </button>
         </div>
     </section>
+    <section class="last-part">
+        <h1>Experience</h1>
+        <div id="full-id" class="flexible-con">
+            <div id="expoId-color" class="expo-item">
+                <h1>Full time Cyclists</h1>
+                <h3 class="set-color">Doing this at 2019</h3>
+                <p>
+                    This will never end 'cause I want more
+                    More, give me more
+                    Give me more
+                    This will never end 'cause I want more
+                    More, give me more
+                    Give me more
+                    If I had a heart I could love you
+                    If I had a voice I would sing
+                    After the night when I wake up
+                    I'll see what tomorrow brings
+                </p>
+            </div>
     
+            <div id="expoId-color" class="expo-item">
+                <h1>I am 7 years old but i can do many things</h1>
+                <h3 class="set-color">My birthday at 22 april 2014</h3>
+                <p>
+                    Dangling feet from window frame
+                    Will I ever ever reach the floor?
+                    More, give me more, give me more
+                    Crushed and filled with all I found
+                    Underneath and inside just to come around
+                    More, give me more, give me more.
+                </p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p>
+            © Abtahi, Since 2014.
+        </p>
+    </footer>
 </body>
 </html>
